Refactor to change name from QAWeb to DevWeb.  Added Projects controller and Projects views for Arena, FMS, and VMS projects.

--- a/src/QAWeb/Views/Shared/_Layout.cshtml
+++ b/src/QAWeb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - QAWeb</title>
+        <title>@ViewData["Title"] - DevWeb</title>
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -33,6 +33,14 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-controller="Projects" asp-action="Arena">Arena</a></li>
+                                <li><a asp-controller="Projects" asp-action="FMS">FMS</a></li>
+                                <li><a asp-controller="Projects" asp-action="VMS">VMS</a></li>
+                            </ul>
+                        </li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
