--- a/src/QAWeb/Views/_ViewImports.cshtml
+++ b/src/QAWeb/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
-﻿@using QAWeb
-@using QAWeb.Models
-@using QAWeb.ViewModels.Account
-@using QAWeb.ViewModels.Manage
+﻿@using DevWeb
+@using DevWeb.Models
+@using DevWeb.ViewModels.Account
+@using DevWeb.ViewModels.Manage
 @using Microsoft.AspNet.Identity
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
